# HasteHealth

./: .gitattributes  README.md  docker-compose.yml  docker-services-compose.yml
backend/: .env.development  Cargo.toml  README.md  audit.toml  haste.toml
backend/crates/access-control/src/: context.rs  lib.rs  request_reflection.rs
backend/crates/artifacts/: Cargo.toml
backend/crates/artifacts/src/: lib.rs
backend/crates/codegen/: Cargo.toml
backend/crates/codegen/src/: traversal.rs  utilities.rs
backend/crates/codegen/src/testscript_gen/: mod.rs
backend/crates/codegen/src/type_gen/: operation_definitions.rs
backend/crates/config/: Cargo.toml
backend/crates/config/src/: environment.rs  lib.rs
backend/crates/encryption/: Cargo.toml
backend/crates/encryption/src/: error.rs  lib.rs  traits.rs
backend/crates/encryption/src/encryption/: aes.rs
backend/crates/encryption/src/providers/: aws.rs  environment.rs  gcp.rs  mod.rs
backend/crates/fhir-client/: Cargo.toml
backend/crates/fhir-client/src/: axum.rs  http.rs  lib.rs  middleware.rs  request.rs  url.rs
backend/crates/fhir-converter/: Cargo.toml
backend/crates/fhir-converter/src/: conversions.rs  lib.rs  main.rs
backend/crates/fhir-converter/src/filters/: fhirpath.rs  mod.rs
backend/crates/fhir-converter/src/liquid_extensions/: mod.rs
backend/crates/fhir-converter/test_templates/: ADT.j2  SIU.j2
backend/crates/fhir-converter/test_templates/partial/: MSH.j2
backend/crates/fhir-generated-ops/src/: generated.rs
backend/crates/fhir-model/: Cargo.toml
backend/crates/fhir-model/benches/: serialization_bench.rs
backend/crates/fhir-model/src/: lib.rs
backend/crates/fhir-model/src/r4/: conversion.rs  mod.rs  sqlx.rs
backend/crates/fhir-operation-error/: Cargo.toml
backend/crates/fhir-operation-error-derive/: Cargo.toml
backend/crates/fhir-operation-error-derive/src/: lib.rs
backend/crates/fhir-operation-error/src/: axum.rs  lib.rs
backend/crates/fhir-ops-derive/: Cargo.toml
backend/crates/fhir-ops-derive/src/: lib.rs
backend/crates/fhir-ops/src/: lib.rs
backend/crates/fhir-profiling/: Cargo.toml
backend/crates/fhir-profiling/src/: element.rs  lib.rs  utilities.rs
backend/crates/fhir-profiling/src/slicing/: mod.rs
backend/crates/fhir-search/: Cargo.toml
backend/crates/fhir-search/src/: indexing_conversion.rs  lib.rs
backend/crates/fhir-serialization-json/: Cargo.toml
backend/crates/fhir-serialization-json-derive/: Cargo.toml
backend/crates/fhir-serialization-json-derive/src/: deserialize.rs  deserialize_serde.rs  lib.rs  serde_deserialize.rs  serde_serialize.rs  serialize.rs  utilities.rs
backend/crates/fhir-serialization-json/src/: deserialize_primitives.rs  lib.rs  serialize_primitives.rs  traits.rs
backend/crates/fhir-subscription-processor/: Cargo.toml
backend/crates/fhir-subscription-processor/src/: lib.rs
backend/crates/fhir-terminology/: Cargo.toml
backend/crates/fhir-terminology/src/: client.rs
backend/crates/fhirpath/: Cargo.toml
backend/crates/fhirpath/benches/: fp_performance.rs
backend/crates/fhirpath/src/: error.rs  lib.rs  parser.rs
backend/crates/hl7v2/: Cargo.toml
backend/crates/hl7v2/benches/: hl7v2_serialization_bench.rs
backend/crates/hl7v2/src/: lib.rs  mllp.rs  parser.rs  serialize.rs
backend/crates/jwt/: Cargo.toml
backend/crates/jwt/src/: claims.rs  lib.rs  reflect.rs  scopes.rs
backend/crates/macro-loads/: Cargo.toml
backend/crates/openapi-schema-generator/: Cargo.toml
backend/crates/openapi-schema-generator/src/: lib.rs
backend/crates/operation_executor/: Cargo.toml  build.rs
backend/crates/operation_executor/src/: lib.rs  structs.rs  traits.rs  validate.rs
backend/crates/pointer/src/: escape.rs  lib.rs
backend/crates/rate-limit/src/: lib.rs
backend/crates/reflect-derive/: Cargo.toml
backend/crates/reflect-derive/src/: lib.rs
backend/crates/reflect/src/: lib.rs  primitives.rs  traits.rs
backend/crates/repository/: Cargo.toml
backend/crates/repository/.sqlx/: query-093210ba70fce2b168d981c050e0e3425dc29f68f0ec2a891e1b6c76d7b39d31.json  query-57ed181ba403198234be1d538312455bf2b0c5562c13976cb9a74a55fd16eba6.json  query-6b6bc9bee94c29b2a4edcd44fe0a6943cf46a5d37dfab2ce0b6468d42a962567.json  query-9910b60feed2d57e8e8fb5f15497c6d7bd1ff69ae7646a1541a9b8546dba1f29.json  query-bc911e0274fb1dab8318e08f1efee8926b8ad6a1992f4f70ada8c0e2f27feb96.json  query-cd34528148240f5772f83bdfe9a18948ebcc43f06873751347b4a73679d99489.json  query-ce09b66ca2ca68f73eba73e0a6d26173006e39a5b996717e6c9b71c88c4fb783.json  query-d08546086f0a13ef3cb2d189cbf8635de74ffe87c31582320e4531d6dee4c4b8.json
backend/crates/repository/pg-migrations/: 20260528210514_sub_topic_locks.sql  20260706211901_user_mfa_table.sql
backend/crates/repository/src/: admin.rs  fhir.rs  lib.rs  sequence.rs  utilities.rs
backend/crates/sd-to-json-schema/: Cargo.toml
backend/crates/sd-to-json-schema/src/: lib.rs
backend/crates/server/: Cargo.toml  package-lock.json
backend/crates/server/benchmarks/: observation_batch_read.lua  observation_read.lua  transaction.lua
backend/crates/server/css/: app.css
backend/crates/server/src/: config.rs  lib.rs  load_artifacts.rs  openapi.rs  route_path.rs  server.rs  services.rs  tenants.rs
backend/crates/sql-on-fhir/: Cargo.toml
backend/crates/sql-on-fhir/src/: lib.rs
backend/crates/testscript-runner/: Cargo.toml
backend/crates/testscript-runner/src/: conversion.rs  lib.rs
backend/crates/wal_worker/: Cargo.toml
backend/crates/wal_worker/src/: es_search_destination.rs
backend/crates/worker/: Cargo.toml
backend/crates/worker/src/: lib.rs  traits.rs
backend/crates/x-fhir-query/: Cargo.toml
backend/crates/x-fhir-query/src/: conversion.rs  lib.rs
backend/scripts/: load_us_core.mjs  operation_build.sh  testscript_build.sh  types_build.sh
backend/src/: client.rs  main.rs
backend/src/commands/: admin.rs  api.rs  codegen.rs  config.rs  fhirpath.rs  hl7v2.rs  mod.rs  server.rs  testscript.rs  worker.rs
backend/testscripts/base/crud/: history_pagination.testscript.json
frontend/: package.json  (+2 more)
(+200 files in other folders)
