[package]
name = "haste-artifacts"
publish = false
description = "FHIR artifacts for Haste Health."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
haste-fhir-model = { path = "../fhir-model", version = "0.*", features = [
    "sqlx",
] }
haste-jwt = { path = "../jwt", version = "0.*" }
rust-embed = { version = "8.11.0", features = [
    "compression",
    "include-exclude",
] }
serde_json = { workspace = true }
