[package]
name = "haste-encryption"
description = "Secret storage/retrieval and symmetric encryption utilities for Haste Health."
publish = false
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }

[features]
aws = []
gcp = []

[dependencies]
aes-gcm = "0.11.0"
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }
tracing = { workspace = true }
