[package]
name = "haste-encryption"
description = "Secret storage/retrieval and symmetric encryption utilities for Haste Health."
publish = false
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }

[features]
aws = []
gcp = []

[dependencies]
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }

aes-gcm = { version = "0.11.0", default-features = false, features = ["aes", "alloc", "getrandom"] }
base64 = { workspace = true, features = ["alloc"] }
tracing = { workspace = true }
