[package]
name = "haste-fhir-client"
description = "Haste Health FHIR client implementation."
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }

[features]
axum = ["dep:axum"]
http = ["dep:reqwest"]

[dependencies]
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }
haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*" }
haste-jwt = { path = "../jwt", version = "0.*" }
haste-reflect = { path = "../reflect", version = "0.*", features = ["derive"] }

axum = { workspace = true, optional = true }
derivative = { workspace = true }
http = { version = "1.4.0", default-features = false, features = ["std"] }
json-patch = { workspace = true }
reqwest = { workspace = true, optional = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
