[package]
name = "haste-fhir-converter"
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
liquid = "0.26.11"
serde = { workspace = true }
serde_json = { workspace = true } 
haste-fhirpath = { path = "../fhirpath" }
haste-fhir-model = { path = "../fhir-model" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*" }
haste-hl7v2 = { path = "../hl7v2" }
haste-reflect = { path = "../reflect" }
liquid-core = {version = "0.26.11", features = ["derive"]}
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
minijinja = "2.20.0"
clap = "4.6.1"
walkdir = { workspace = true }