[package]
name = "haste-fhir-operation-error"
version = { workspace = true }
edition = { workspace = true }
description = "Haste Health FHIR operation error handling."
license = { workspace = true }
homepage = { workspace = true }

[features]
derive = ["dep:haste-fhir-operation-error-derive"]
axum = ["dep:axum", "dep:haste-fhir-serialization-json"]

[dependencies]
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error-derive = { path = "../fhir-operation-error-derive", version = "0.*", optional = true }
haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*", optional = true }

anyhow = { version = "1.0.102", default-features = false, features = ["std"] }
axum = { workspace = true, optional = true }
serde_json = { workspace = true }
