[package]
name = "haste-fhir-ops-derive"
version = { workspace = true }
edition = { workspace = true }
description = "Haste Health FHIR operations derive macros."
license = { workspace = true }
homepage = { workspace = true }

[lib]
proc-macro = true

[dependencies]
haste-fhir-model = { path = "../fhir-model", version = "0.*" }

proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = {workspace = true }
