[package]
name = "haste-fhir-serialization-json-derive"
version = { workspace = true }
edition = { workspace = true }
description = "FHIR JSON serialization derive macros for Haste Health."
license = { workspace = true }
homepage = { workspace = true }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["clone-impls", "derive", "extra-traits", "full", "parsing", "printing", "proc-macro"] }
