[package]
name = "haste-fhirpath"
version = { workspace = true }
edition = { workspace = true }
description = "Haste Health FHIRPath evaluation library."
license = { workspace = true }
homepage = { workspace = true }

[dependencies]
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-reflect = { path = "../reflect", version = "0.*" }
haste-reflect-derive = { path = "../reflect-derive", version = "0.*" }

bumpalo = { version = "3.20.2", default-features = false }
dashmap = { version= "6.2.1", default-features = false }
peg = { version = "0.8.6", default-features = false, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*" }

criterion = { workspace = true, features = ["async_tokio"] }
insta = { version = "1.47.2", default-features = false }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[[bench]]
name = "fp_performance"
harness = false
