[package]
name = "haste-macro-loads"
version = { workspace = true }
edition = { workspace = true }
description = "Macro loads for Haste Health."
license = { workspace = true }
homepage = { workspace = true }

[lib]
proc-macro = true

[dependencies]
quote = { workspace = true }
syn = { workspace = true, features = ["parsing", "proc-macro"] }
walkdir = { workspace = true }
