[package]
name = "haste-operation-executor"
publish = false
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
haste-fhir-client = { path = "../fhir-client", version = "0.*", features = [
    "http"
] }
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*" }
haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*" }
haste-reflect = { path = "../reflect", version = "0.*" }

deno_ast = { version = "0.53.2", default-features = false, features = ["transpiling"] }
deno_core = { version = "0.407.0", default-features = false, features = ["reactor-tokio"] }
deno_error = { version = "0.7.1", default-features = false }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }

[build-dependencies]
deno_core = { version = "0.407.0", default-features = false, features = ["reactor-tokio"] }
