[package]
name = "haste-repository"
version = { workspace = true }
edition = { workspace = true }
description = "Repository/storage for Haste Health resources."
license = { workspace = true }
homepage = { workspace = true }

[features]
rate-limit = []

[dependencies]
haste-fhir-client = { path = "../fhir-client", version = "0.*" }
haste-fhir-model = { path = "../fhir-model", version = "0.*", features = [
    "sqlx",
] }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
] }
haste-jwt = { path = "../jwt", version = "0.*", features = ["sqlx"] }
haste-rate-limit = { path = "../rate-limit", version = "0.*" }
haste-reflect = { path = "../reflect", version = "0.*", features = ["derive"] }

argon2 = { workspace = true }
chrono = { workspace = true }
moka = { workspace = true, features = ["future"] }
nanoid = { version = "0.4.0", default-features = false }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "time",
    "chrono",
] }
sqlx-postgres = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
