[package]
name = "haste-server"
publish = false
description = "Haste Health server application."
license = "GPL-3.0"
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }

[dependencies]
haste-access-control = { path = "../access-control", version = "0.*" }
haste-artifacts = { path = "../artifacts", version = "0.*" }
haste-encryption = { path = "../encryption", version = "0.*" }
haste-fhir-client = { path = "../fhir-client", version = "0.*", features = [
    "http",
    "axum",
] }
haste-fhir-generated-ops = { path = "../fhir-generated-ops", version = "0.*" }
haste-fhir-model = { path = "../fhir-model", version = "0.*", features = [
    "sqlx",
] }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*", features = [
    "derive",
    "axum",
] }
haste-fhir-ops = { path = "../fhir-ops", version = "0.*" }
haste-fhir-profiling = { path = "../fhir-profiling", version = "0.*" }
haste-fhir-search = { path = "../fhir-search", version = "0.*" }
haste-fhir-serialization-json = { path = "../fhir-serialization-json", version = "0.*" }
haste-fhir-terminology = { path = "../fhir-terminology", version = "0.*" }
haste-fhirpath = { path = "../fhirpath", version = "0.*" }
haste-hl7v2 = { path = "../hl7v2", version = "0.*" }
haste-jwt = { path = "../jwt", version = "0.*" }
haste-openapi-schema-generator = { path = "../openapi-schema-generator", version = "0.*" }
haste-operation-executor = { path = "../operation_executor", version = "0.*" }
haste-rate-limit = { path = "../rate-limit", version = "0.*" }
haste-reflect = { path = "../reflect", version = "0.*", features = ["derive"] }
haste-repository = { path = "../repository", version = "0.*", features = [
    "rate-limit",
] }
haste-sd-to-json-schema = { path = "../sd-to-json-schema", version = "0.*" }
haste-sql-on-fhir = { path = "../sql-on-fhir", version = "0.*" }

axum = { workspace = true, features = ["form", "json", "macros", "query"] }
axum-client-ip = { version = "1.3.1", default-features = false, features = ["connect-info"] }
axum-extra = { version = "0.12.6", default-features = false, features = [
    "typed-routing",
    "typed-header",
    "cached",
] }
base64 = { workspace = true }
chrono = { workspace = true }
derivative = { workspace = true }
dotenvy = { workspace = true }
email_address = { version = "0.2.9", default-features = false, features = ["serde_support"] }
json-patch = { workspace = true }
jsonwebtoken = { workspace = true }
maud = { version = "0.27.0", default-features = false, features = ["axum"] }
mime_guess = { version = "2.0.5", default-features = false }
moka = { workspace = true, features = ["future"] }
petgraph = { version = "0.8.3", default-features = false }
rand = { version = "0.8", default-features = false }
regex = { workspace = true }
reqwest = { workspace = true, features = ["form"] }
rsa = { version = "0.9.10", default-features = false, features = ["pem"] }
rust-embed = { workspace = true, features = ["axum-ex"] }
sendgrid = { version = "0.26.0", default-features = false }
sentry = { workspace = true, features = ["tower-axum-matched-path"] }
serde = { workspace = true }
serde_html_form = { version = "0.4.0", default-features = false, features = ["de", "std"] }
serde_json = { workspace = true }
sha1 = { version = "0.10.6", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
sqlx = { workspace = true, features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "time",
] }
sqlx-postgres = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread"] }
totp-rs = { version = "5.7.2", default-features = false, features = ["qr", "gen_secret"] }
tower = { version = "0.5.3", default-features = false }
tower-http = { version = "0.6.11", default-features = false, features = [
    "fs",
    "cors",
    "normalize-path",
    "compression-gzip",
    "trace",
    "set-header",
    "catch-panic",
] }
tower-sessions = { version = "0.14.0", default-features = false, features = ["axum-core"] }
tower-sessions-sqlx-store = { version = "0.15.0", default-features = false, features = ["postgres"] }
tracing = { workspace = true }
typify = { version = "0.5.0", default-features = false, features = ["macro"] }
url = { version = "2.5.8", default-features = false }
walkdir = { workspace = true }
zxcvbn = { version = "3.1.1", default-features = false }
