[package]
name = "haste-sql-on-fhir"
publish = false
description = "A crate for executing SQL queries on FHIR resources using a ViewDefinition."
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*" }
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-client = { path = "../fhir-client", version = "0.*" }
haste-fhirpath = { path = "../fhirpath", version = "0.*" }
haste-reflect = { path = "../reflect", version = "0.*" }
haste-fhir-generated-ops = { path = "../fhir-generated-ops", version = "0.*" }
haste-jwt = { path = "../jwt", version = "0.*" }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
base64 = "0.22.1"
ordermap = { version = "1.2.0", features = ["serde"] }
csv = "1.4"
itertools = "0.15.0"
futures = "0.3.32"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

