[package]
name = "haste-sql-on-fhir"
publish = false
description = "A crate for executing SQL queries on FHIR resources using a ViewDefinition."
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22.1"
chrono = { workspace = true }
csv = "1.4"
futures = "0.3.32"
haste-fhir-client = { path = "../fhir-client", version = "0.*" }
haste-fhir-generated-ops = { path = "../fhir-generated-ops", version = "0.*" }
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*" }
haste-fhirpath = { path = "../fhirpath", version = "0.*" }
haste-jwt = { path = "../jwt", version = "0.*" }
haste-reflect = { path = "../reflect", version = "0.*" }
itertools = "0.15.0"
ordermap = { version = "1.2.0", features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

