[package]
name = "haste-sql-on-fhir"
publish = false
description = "A crate for executing SQL queries on FHIR resources using a ViewDefinition."
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
haste-fhir-client = { path = "../fhir-client", version = "0.*" }
haste-fhir-generated-ops = { path = "../fhir-generated-ops", version = "0.*" }
haste-fhir-model = { path = "../fhir-model", version = "0.*" }
haste-fhir-operation-error = { path = "../fhir-operation-error", version = "0.*" }
haste-fhirpath = { path = "../fhirpath", version = "0.*" }
haste-jwt = { path = "../jwt", version = "0.*" }
haste-reflect = { path = "../reflect", version = "0.*" }

base64 = { workspace = true, features = ["alloc"] }
chrono = { workspace = true }
csv = { version = "1.4", default-features = false }
futures = { version = "0.3.32", default-features = false, features = ["alloc"] }
itertools = { version = "0.15.0", default-features = false, features = ["use_alloc"] }
ordermap = { version = "1.2.0", default-features = false, features = ["serde", "std"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
